--- a/php/includes/form.inc.html
+++ b/php/includes/form.inc.html
@@ -2,7 +2,7 @@
     <h2>Ajouter des données</h2>
     <div class="d-flex justify-content-center">
 
-        <form class="container h-100" action="index.php" method="post">
+        <form class="container h-100" action="../index.php" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" placeholder="Prénom" name="firstname">
@@ -19,16 +19,16 @@
 <br>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend"><span class="input-group-text">Taille (1.26m à 3m)</span></div>
-                    <input type="number" class="form-control" aria-label="Somme arrondie">
+                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size">
                     <div class="input-group-append"><span class="input-group-text">cm</span></div>
                 </div>
 <br>
                 <div class="form-group col-md-4">
-                    <input name="sexe" type="radio" id="Femme" value="F">
+                    <input name="sexe" type="radio" id="Femme" value="Mme">
                     <label for="Femme">Femme</label>
-                    <input name="sexe" type="radio" id="Homme" value="H">
+                    <input name="sexe" type="radio" id="Homme" value="Mr">
                     <label for="Homme">Homme</label>
-                    <input name="sexe" type="radio" id="Autre" value="A">
+                    <input name="sexe" type="radio" id="Autre" value="truc">
                     <label for="Autre">Autre</label>
                 </div>
             </div>
