--- a/php/includes/form.inc.html
+++ b/php/includes/form.inc.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
 <br>
-            <input type="submit" class="btn btn-primary" value="Enregistrer les données">
+            <input name="donnees" type="submit" class="btn btn-primary" value="Enregistrer les données">
         </form>
     </div>
 </section>
