--- a/php/includes/form.inc.html
+++ b/php/includes/form.inc.html
@@ -5,30 +5,30 @@
         <form class="container h-100" action="../index.php" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Prénom" name="firstname">
+                    <input type="text" class="form-control" placeholder="Prénom" name="firstname" required="required">
                 </div>
 <br>
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Nom" name="lastname">
+                    <input type="text" class="form-control" placeholder="Nom" name="lastname" required="required">
                 </div>
 <br>
                 <div class="form-group col-md-6">
                     <label for="old">Age (18 à 70 ans)</label>
-                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age">
+                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age" min="18" max="70" required="required">
                 </div>
 <br>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend"><span class="input-group-text">Taille (1.26m à 3m)</span></div>
-                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size">
+                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size" min="1.26" max="3" required="required">
                     <div class="input-group-append"><span class="input-group-text">cm</span></div>
                 </div>
 <br>
                 <div class="form-group col-md-4">
-                    <input name="sexe" type="radio" id="Femme" value="Mme">
+                    <input name="sexe" type="radio" id="Femme" value="Mme" required="required">
                     <label for="Femme">Femme</label>
-                    <input name="sexe" type="radio" id="Homme" value="Mr">
+                    <input name="sexe" type="radio" id="Homme" value="Mr" required="required">
                     <label for="Homme">Homme</label>
-                    <input name="sexe" type="radio" id="Autre" value="truc">
+                    <input name="sexe" type="radio" id="Autre" value="truc" required="required">
                     <label for="Autre">Autre</label>
                 </div>
             </div>
