--- a/php/includes/form.inc.html
+++ b/php/includes/form.inc.html
@@ -5,21 +5,21 @@
         <form class="container h-100" action="../index.php" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Prénom" name="firstname" required="required">
+                    <input type="text" class="form-control" placeholder="Prénom" name="firstname" required="required" pattern="[a-z]+">
                 </div>
 <br>
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Nom" name="lastname" required="required">
+                    <input type="text" class="form-control" placeholder="Nom" name="lastname" required="required" pattern="[a-z]+">
                 </div>
 <br>
                 <div class="form-group col-md-6">
                     <label for="old">Age (18 à 70 ans)</label>
-                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age" min="18" max="70" required="required">
+                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age" min="18" max="70" required="required" pattern="[a-z]+">
                 </div>
 <br>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend"><span class="input-group-text">Taille (1.26m à 3m)</span></div>
-                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size" min="1.26" max="3" required="required">
+                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size" min="1.26" max="3" required="required" pattern="[a-z]+"> 
                     <div class="input-group-append"><span class="input-group-text">cm</span></div>
                 </div>
 <br>
