--- a/php/includes/form.inc.html
+++ b/php/includes/form.inc.html
@@ -14,12 +14,12 @@
 <br>
                 <div class="form-group col-md-6">
                     <label for="old">Age (18 à 70 ans)</label>
-                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age" min="18" max="70" required="required" pattern="[a-z]+">
+                    <input name="old" type="number" class="form-control" placeholder="Renseignez votre age" min="18" max="70" required="required" pattern="[0-9]+">
                 </div>
 <br>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend"><span class="input-group-text">Taille (1.26m à 3m)</span></div>
-                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size" min="1.26" max="3" required="required" pattern="[a-z]+"> 
+                    <input type="number" step="0.01" class="form-control" aria-label="Somme arrondie" name ="size" min="1.26" max="3" required="required"> 
                     <div class="input-group-append"><span class="input-group-text">cm</span></div>
                 </div>
 <br>
